# MiniPupperDocs

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy-pages.yaml  update-translation.yaml
docs/: Makefile  conf.py  index.rst
docs/guide/: Applications.rst  AssembleMiniPupper2.rst  AssembleMiniPupper2Pro.rst  Assembly.MiniPupper2.rst  Assembly.rst  Dance.rst  Examples.rst  Expansions.rst  Features.rst  HowToOrder.rst  MachineLearning.rst  MultimodalGenAI.rst  Navigation.rst  Operation.rst  QuickStartGuide.rst  ROS2Guide.rst  ROS2Installation.rst  ROS2QuickStart.rst  ROS2QuickStartGuide.rst  ReinforcementLearning.rst  SLAM.rst  Simulation.rst  Software.rst  SoftwareCalibration.MP2.rst  SoftwareCalibration.rst
docs/guide/Assembly/: MiniPupper.rst  MiniPupper2.rst  MiniPupper2Pro.rst  index.rst
docs/locales/ja/LC_MESSAGES/: guide.mo  guide.po  index.mo  index.po  reference.mo  reference.po
docs/locales/ja/LC_MESSAGES/guide/: Assembly.po  Examples.po  Features.po  HowToOrder.po  MachineLearning.po  MultimodalGenAI.po  QuickStartGuide.po  ROS2Guide.po  ReinforcementLearning.po  SLAM.po  SoftwareCalibration.po
docs/locales/ja/LC_MESSAGES/guide/Assembly/: MiniPupper.po  MiniPupper2.po  MiniPupper2Pro.po  index.po
docs/locales/ja/LC_MESSAGES/reference/: Design.po  FAQ.po  PCB.po
docs/reference/: Design.rst  FAQ.rst  Help.rst  PCB.rst
