[tool.poetry]
name = "minipupperdocs"
version = "0.1.0"
description = ""
authors = ["MangDang <sales@mangdang.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
recommonmark = "^0.7.1"
sphinx-intl = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
